--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,21 +8,24 @@
 </head>
 
 <body>
-    <header style="float: left;width: 100%;">
-        <table style="border-collapse:collapse;background-color: #2c3633;width: 100%;height: 75px;margin: 0%;">
-            <td>
-                <a href="http://localhost:3000/iletisim">
-                    <button
-                        style="border-color: #2c3633;float:left;background-color:#2c3633;color:white;width:200px;height:75px;">İletişim
-                    </button></a>
-
-                <a href="https://tr.wikipedia.org/wiki/T%C3%BCrkiye%27nin_il%C3%A7eleri">
-                    <button
-                        style="border-color: #2c3633;float:left;background-color:#2c3633;color:white;width:200px;height:75px;">Türkiye
-                        il ilçe sayfası </button></a>
-            </td>
+    <header style="float: left; width: auto; background-color: #2c3633">
+        <table style="border-collapse: collapse; background-color: #2c3633; width: auto; height: 75px; margin: 0;">
+            <tr>
+                <td style="padding: 0;">
+                    <a href="http://localhost:3000" style="display: inline-block;">
+                        <button style="border: none; background-color: #2c3633; color: white; width: 200px; height: 75px; cursor: pointer;">Anasayfa</button>
+                    </a>
+                    <a href="http://localhost:3000/iletisim" style="display: inline-block;">
+                        <button style="border: none; background-color: #2c3633; color: white; width: 200px; height: 75px; cursor: pointer;">İletişim</button>
+                    </a>
+                    <a href="https://tr.wikipedia.org/wiki/T%C3%BCrkiye%27nin_il%C3%A7eleri" style="display: inline-block;">
+                        <button style="border: none; background-color: #2c3633; color: white; width: 200px; height: 75px; cursor: pointer;">Türkiye il ilçe sayfası</button>
+                    </a>
+                </td>
+            </tr>
         </table>
-    </header><br><br><br>
+    </header>
+    <br><br><br>
 
     <div style="margin: 4%;">
         <form id="filterForm">
